@@ -129,7 +129,7 @@
         <dependency>
             <groupId>com.github.librepdf</groupId>
             <artifactId>openpdf</artifactId>
-            <version>1.3.35</version>
+            <version>1.3.39</version>
         </dependency>
 
         <!-- Lombok（⚠️ 仅运行时依赖，禁止添加 annotationProcessorPaths） -->
@@ -288,6 +288,9 @@
                             <artifactId>lombok</artifactId>
                         </exclude>
                     </excludes>
+                    <jvmArguments>
+                        --enable-native-access=ALL-UNNAMED
+                    </jvmArguments>
                 </configuration>
             </plugin>
 
